// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should load BuildGraph from exported project 1`] = `
Object {
  "components": Array [
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Class1\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed = Fa...",
      "details": Object {
        "path": undefined,
      },
      "filename": "Class1.cls",
      "name": "Class1",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Dictionary\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed ...",
      "details": Object {
        "path": undefined,
      },
      "filename": "Dictionary.cls",
      "name": "Dictionary",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"JsonConverter\\"
''
' VBA-JSON v2.3.0
' (c) Tim Hall - https://github.com/VBA-tools/VBA-JSON
'
' JSON Converter for VBA
'
' Errors:
' 10001 - JSON parse error
'
' @class JsonConverter
' @autho...",
      "details": Object {
        "path": undefined,
      },
      "filename": "JsonConverter.bas",
      "name": "JsonConverter",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Sheet1\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = Tru...",
      "details": Object {
        "path": undefined,
      },
      "filename": "Sheet1.cls",
      "name": "Sheet1",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Sheet2\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = Tru...",
      "details": Object {
        "path": undefined,
      },
      "filename": "Sheet2.cls",
      "name": "Sheet2",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Sheet3\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = Tru...",
      "details": Object {
        "path": undefined,
      },
      "filename": "Sheet3.cls",
      "name": "Sheet3",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"ThisWorkbook\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed...",
      "details": Object {
        "path": undefined,
      },
      "filename": "ThisWorkbook.cls",
      "name": "ThisWorkbook",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"Validation\\"
Public Function Validate() As String
    On Error GoTo ErrorHandling

    Dim Errors As New Collection

    If ThisWorkbook.VBProject.VBComponents.Count <> 8 Then
        Err...",
      "details": Object {
        "path": undefined,
      },
      "filename": "Validation.bas",
      "name": "Validation",
      "type": "module",
    },
  ],
  "from_dependencies": Object {
    "components": Object {},
    "references": Object {},
  },
  "name": "VBAProject",
  "references": Array [
    Object {
      "guid": "{0002E157-0000-0000-C000-000000000046}",
      "major": 5,
      "minor": 3,
      "name": "VBIDE",
      "version": "5.3",
    },
  ],
}
`;

exports[`should load dev-src from exported project 1`] = `
Object {
  "components": Array [
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Dictionary\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed ...",
      "details": Object {
        "path": undefined,
      },
      "filename": "Dictionary.cls",
      "name": "Dictionary",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"JsonConverter\\"
''
' VBA-JSON v2.3.0
' (c) Tim Hall - https://github.com/VBA-tools/VBA-JSON
'
' JSON Converter for VBA
'
' Errors:
' 10001 - JSON parse error
'
' @class JsonConverter
' @autho...",
      "details": Object {
        "path": undefined,
      },
      "filename": "JsonConverter.bas",
      "name": "JsonConverter",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"TestClass\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed =...",
      "details": Object {
        "path": undefined,
      },
      "filename": "TestClass.cls",
      "name": "TestClass",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"TestModule\\"
",
      "details": Object {
        "path": undefined,
      },
      "filename": "TestModule.bas",
      "name": "TestModule",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"Validation\\"
",
      "details": Object {
        "path": undefined,
      },
      "filename": "Validation.bas",
      "name": "Validation",
      "type": "module",
    },
  ],
  "from_dependencies": Object {
    "components": Object {},
    "references": Object {},
  },
  "name": "VBAProject",
  "references": Array [],
}
`;
